Add new words and categories to defaultWords array

--- a/index.html
+++ b/index.html
@@ -258,11 +258,11 @@
         let isStatsVisible = false;
 
         const defaultWords = [
-            { word: "Pizza", category: "Food", hint: "Italy" },
-            { word: "Dinosaur", category: "History", hint: "Museum" },
-            { word: "Submarine", category: "Transport", hint: "Yellow" },
-            { word: "Volcano", category: "Nature", hint: "Magma" },
-            { word: "Cinema", category: "Place", hint: "Popcorn" }
+            { word: "Espresso", category: "Drinks", hint: "Small" },
+            { word: "Eiffel Tower", category: "Landmarks", hint: "Metal" },
+            { word: "Great White Shark", category: "Animals", hint: "Ocean" },
+            { word: "Bitcoin", category: "Finance", hint: "Risky" },
+            { word: "Starwars", category: "Movies", hint: "Aliens" }
         ];
 
         window.onload = async () => {
