Add visual indicators for checkbox inputs

--- a/index.html
+++ b/index.html
@@ -135,10 +135,12 @@
                 <div class="grid grid-cols-2 gap-3">
                     <label class="flex items-center gap-3 p-3 bg-slate-800/50 rounded-xl cursor-pointer">
                         <input type="checkbox" id="set-show-category" class="hidden custom-checkbox" checked>
+                        <div class="w-5 h-5 border-2 border-slate-600 rounded flex items-center justify-center transition-colors"/>
                         <span class="text-xs font-bold uppercase">Imposter sees Category</span>
                     </label>
                     <label class="flex items-center gap-3 p-3 bg-slate-800/50 rounded-xl cursor-pointer">
                         <input type="checkbox" id="set-show-hint" class="hidden custom-checkbox">
+                        <div class="w-5 h-5 border-2 border-slate-600 rounded flex items-center justify-center transition-colors"/>
                         <span class="text-xs font-bold uppercase">Imposter sees Hint</span>
                     </label>
                 </div>
