--- a/index.html
+++ b/index.html
@@ -545,5 +545,12 @@
             }
         }
     </script>
+
+    <link rel="manifest" href="manifest.json">
+    <script>
+      if ('serviceWorker' in navigator) {
+        navigator.serviceWorker.register('sw.js');
+      }
+    </script>
 </body>
 </html>
