--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@
             const max = Math.max(1, Math.floor(n / 2) - 1);
             
             if (dir === 1 && gameConfig.imposterCount >= max) {
-                showToast(`Max Imposters reached: Must be less than half of players (${max})`);
+                showToast(`Max Imposters reached: Must be less than half of players.`);
                 return;
             }
             
